--- a/app/views/candidates/index.html.erb
+++ b/app/views/candidates/index.html.erb
@@ -6,6 +6,10 @@
 <body>
 <p id="notice"><%= notice %></p>
 
+
+  <%#= link_to 'Parser', parser_index_path %>
+
+
 <!--<h1>Candidates</h1>-->
 <h1>Candidates</h1>
 
