--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,10 +13,10 @@
   <!--##############################---Search--#############################################-->
   <div class="container search_margin_top" style="padding-top: 25px">
     <%#= label_tag(:q, "Search for:") %>
-    <%= form_with url: search_path, local: true, method: :get do |form| %>
-        <%= form.text_field :q, :size =>"40", placeholder: "Search yours Candidate", data:{behavior: "autocomplete"}, class: "form-control width_of_search" %>
+    <%= form_with url: search_url, local: true, method: :get do |form| %>
+        <%= form.text_field :q, :size =>"40", placeholder: "Введите слово", data:{behavior: "autocomplete"}, class: "form-control width_of_search" %>
         <div class="ttt" style="padding-top: 10px">
-          <%= form.button "Search", class: "btn btn-large btn-primary" %>
+          <%= form.button "Поиск", class: "btn btn-large btn-primary" %>
         </div>
     <% end %>
   </div>
