--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,99 +1,5 @@
-<% provide(:title, 'Help') %>
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Ruby on Rails Tutorial Sample App | <%= yield(:title) %></title>
 
-
-  <style >
-    /* Код увеличителя начинается здесь */
-    /* Если ваше изображение не связано ссылкой с другой страницей, оставьте ссылку в виде <a href="#nogo">
-    Иначе увеличительне будет работать в IE6 */
-
-    .ienlarger {
-      float: left;
-      clear: none; /* Можно установить left или right по необходимости */
-      padding-bottom: 5px; /* Расстояние между миниатюрами. Лучше не трогать данное поле */
-      padding-right: 5px; /* Расстояние между миниатюрами и окружающим текстом */
-    }
-
-    .ienlarger a {
-      display:block;
-      text-decoration: none;
-      /* Если добавить правило cursor:default;, то отключится курсор в виде руки */
-    }
-
-    .ienlarger a:hover{ /* Не надо изменять тип позиционирования */
-      position:relative;
-    }
-
-    .ienlarger span img {
-      border: 1px solid #FFFFFF; /* Добавляем рамку вокруг изображения */
-      margin-bottom: 8px; /* /Сдвигаем текст вниз от изображения */
-    }
-
-    .ienlarger a span {  /* Для большого изображения и названия */
-      position: absolute;
-      display:none;
-      color: #FFCC00; /* Текст названия */
-      text-decoration: none;
-      font-family: Arial, Helvetica, sans-serif;
-      font-size: 13px; /* Размер шрифта названия */
-      background-color: #000000;
-      font-weight: bold;
-      padding-top: 10px;
-      padding-right: 10px;
-      padding-bottom: 13px;
-      padding-left: 10px;
-    }
-
-    .ienlarger img { /* Для IE, чтобы не было рамки вокруг ссылки */
-      border-width: 0;
-    }
-
-    .ienlarger a:hover span {
-      display:block;
-      top: 50px; /* Большое изображение выскакивает вверх на 50px от миниатюры */
-      left: 90px; /* Большое изображение выскакивает влево на 90px от миниатюры */
-      z-index: 100;
-
-      /* Если добавить правило cursor:default;, то отключится курсор в виде руки на большом изображении */
-    }
-
-    .resize_thumb {
-      width: 150px; /* Вводим нужный размер миниатюры здесь */
-      height : auto;
-    }
-
-  </style>
-</head>
-<body>
-<% provide(:title, 'Help') %>
-<h1>Help</h1>
-
-
-
-<div class="ienlarger">
-  <a
-  href="">
-    <img
-    src="https://unsplash.it/800/400?image=179" alt="thumb"
-    class="resize_thumb" />
-    <span>
-    <img src="https://unsplash.it/800/400?image=179"
-         alt="large" /><br />
-    Текст можно написать здесь.</span></a></div>
-<br style="clear:left" />
-
-
-
-
-
-<figure tabindex="1">
-  <img src="https://unsplash.it/800/400?image=179" />
-  <figcaption>Текст</figcaption>
-</figure>
-
-
-</body>
-</html>
+<h1>Вопросы и ответы</h1>
+<p>
+  На этой странице будут размещаться вопросы и ответы для наших посетителей
+</p>
