--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,7 +4,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Evtushenko Production | <%= yield(:title) %></title>
+  <title>Ievtushenko Production | <%= yield(:title) %></title>
 
 </head>
 <body>
