--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -20,16 +20,16 @@
 
       <nav class="nav pull-right buttons">
         <p class="static_page" style="">
-          <%= link_to "Главная",    home_path %><br>
+          <%#= link_to "Главная",    home_path %><br>
 
-          <%= link_to "Мужское",    men_path %>
-          <%= link_to "Женское",    women_path %><br>
-          <%= link_to "Вопросы и Ответы",    help_path %>
-          <%= link_to "Как Купить?",    howtobuy_path %><br>
-          <%= link_to "О нашей продукции",    material_path %><br>
-          <%= link_to "Контакты",    contact_path %>
+          <%#= link_to "Мужское",    men_path %>
+          <%#= link_to "Женское",    women_path %><br>
+          <%#= link_to "Вопросы и Ответы",    help_path %>
+          <%#= link_to "Как Купить?",    howtobuy_path %><br>
+          <%#= link_to "О нашей продукции",    material_path %><br>
+          <%#= link_to "Контакты",    contact_path %>
           <%= link_to "Условия Обмена",    termsofexchange_path %><br>
-        <%= link_to "Оплата и Доставка",    shipping_payment_path %>
+        <%#= link_to "Оплата и Доставка",    shipping_payment_path %>
 
         </p>
       </nav>
