--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -3,3 +3,17 @@
 <p>
   Здесь в скором времени вы увидете наши контакты!
 </p>
+
+
+<h1>Наши Контакты</h1>
+<p>
+  Здесь в скором времени вы увидете наши контакты!
+</p>
+<h1>Наши Контакты</h1>
+<p>
+  Здесь в скором времени вы увидете наши контакты!
+</p>
+<h1>Наши Контакты</h1>
+<p>
+  Здесь в скором времени вы увидете наши контакты!
+</p>
