--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,10 +1,10 @@
 
 
-<% provide(:title, 'Home') %>
+
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Ievtushenko Production | <%= yield(:title) %></title>
+  <!--<title>Ievtushenko Production | <%= yield(:title) %></title>-->
 
 </head>
 <body>
@@ -13,18 +13,7 @@
 
 
 <!--/////////////////////////////////-->
-<% @products.each do |product| %>
 
-
-
-      <%#= image_tag product.image.thumb.url, class: "resize_thumb"%>
-
-     <%= image_tag product.image.url%>
-     <%= product.name %>
-     <%= product.description %><br><br>
-
-
-<% end %>
 
   <button style="background-position:center; position: center", class="with-delay">
     <%= link_to 'Adminka', products_path, class: "btn btn-mini btn-warning", type: "button"%>
@@ -34,5 +23,88 @@
 
 
 
+</body>
+</html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <!--<link rel="stylesheet" href="css/style.css">-->
+  <title>Ievtushenko Production | <%= yield(:title) %></title>
+</head>
+
+
+<body>
+
+
+
+<div class="slider">
+  <div class="slide">
+    <% @products.each do |product| %>
+      <%#= image_tag product.image.thumb.url, class: "resize_thumb"%>
+      <%= image_tag product.image.thumb.url%>
+      <%#= product.name %>
+      <%#= product.description %><br><br>
+    <% end %>
+    <!--<img src="img/slideshow_1.jpg" alt="slide1">-->
+  </div>
+
+<div class="catalog">
+
+
+  <div>
+    <% @for_men.each do |for_man| %>
+    <a  data-fancybox data-caption="">
+      <%= image_tag for_man.avatar.thumb.url %>
+    </a>
+    <h3><%= for_man.name %></h3>
+      <h3><%= for_man.description %></h3>
+  </div>
+    <% end %>
+
+  </div>
+
+
+
+  <!--<div>-->
+    <!--<a href="img/2.jpg" data-fancybox data-caption="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!-->
+			<!--"><img  alt="photo"/></a>-->
+    <!--<h3>499 грн</h3>-->
+  <!--</div>-->
+
+
+</div>
+<footer>
+  <div class="service">
+    <h3>Сервис</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero laudantium at fugiat, consectetur iure repudiandae! Earum illum laborum atque, quod odit, quam reprehenderit ut perspiciatis! Optio at porro atque consequatur.</p>
+  </div>
+  <div class="contacts">
+    <h3>Контакты</h3>
+    <p>+38(048) 722-45-03</p>
+    <p>+38(067) 722-45-03</p>
+    <p>+38(093) 722-45-03</p>
+    <h3>Поделиться</h3>
+    <a href="www.facebook.com"><img src="img/facebook.png" alt="facebook"></a>
+    <a href="www.instagram.com"><img src="img/instagram.png" alt="instagram"></a>
+    <h3>Где нас можно найти?</h3>
+    <p>Г. Одесса, промрынок "7 км", контейнер 133.</p>
+    <p>Ассортимент на сайте может отличаться от фактического.</p>
+  </div>
+  <div class="timework">
+    <h3>Время работы</h3>
+    <p>ПН: 10:00 - 17:00</p>
+    <p>ВТ: 10:00 - 17:00</p>
+    <p>СР: 10:00 - 17:00</p>
+    <p>ЧТ: 10:00 - 17:00</p>
+    <p>СБ: 10:00 - 17:00</p>
+    <p>ВС: 10:00 - 17:00</p>
+  </div>
+</footer>
+<script src="js/jquery.js" type="text/javascript"></script>
+<script src="js/slick.min.js" type="text/javascript"></script>
+<script src="js/jquery.fancybox.js" type="text/javascript"></script>
+<script src="js/script.js" type="text/javascript"></script>
 </body>
 </html>
