--- a/app/views/for_women/index.html.erb
+++ b/app/views/for_women/index.html.erb
@@ -17,9 +17,9 @@
         <td><%= image_tag for_woman.womanavtr.thumb.url %></td>
         <td><%= for_woman.name %></td>
         <td><%= for_woman.description %></td>
-        <td><%= link_to 'Show', for_woman %></td>
-        <td><%= link_to 'Edit', edit_for_woman_path(for_woman) %></td>
-        <td><%= link_to 'Destroy', for_woman, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Просмотр', for_woman %></td>
+        <td><%= link_to 'Редактировани', edit_for_woman_path(for_woman) %></td>
+        <td><%= link_to 'Удалить', for_woman, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -27,4 +27,4 @@
 
 <br>
 
-<%= link_to 'New For Woman', new_for_woman_path %>
+<%= link_to 'Создать', new_for_woman_path %>
