--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -6,7 +6,7 @@ html {
 }
 
 body {
-  padding-top: 140px;
+  padding-top: 240px;
   //padding-top: 70px;
   width: 100%;
   background-attachment: scroll;
@@ -25,6 +25,7 @@ textarea {
 }
 
 .center h1 {
+
   margin-bottom: 10px;
 }
 
@@ -136,14 +137,14 @@ footer :after {
 h1, h2, h3, h4, h5, h6 {
   line-height: 1;
 }
-
+//
 h1 {
   font-size: 3em;
   letter-spacing: -2px;
   margin-bottom: 30px;
   text-align: center;
 }
-
+//
 h2 {
   font-size: 1.2em;
   letter-spacing: -1px;
@@ -152,7 +153,7 @@ h2 {
   font-weight: normal;
   color: #999;
 }
-
+//
 p {
   font-size: 1.1em;
   line-height: 1.7em;
@@ -1161,8 +1162,8 @@ video {
   margin: 0;
   padding: 0;
   border: 0;
-  font-size: 100%;
-  font: inherit;
+  //font-size: 100%;
+  //font: inherit;
   vertical-align: baseline;
 }
 
@@ -1589,9 +1590,10 @@ table {
 }
 
 .slider {
+  padding-top: 50px;
   width: 100%;
-  max-width: 1920px;
-  min-width: 800px;
+  max-width: 1220px;
+  min-width: 600px;
   margin: 0 auto;
 }
 
