--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="navbar-inner">
     <div class="Logoimage">
-      <%= link_to(image_tag("Logo_I.png", size: "150x150",
+      <%= link_to(image_tag("Logo_I.png", size: "100x100",
                             :alt => "rss feed", id:'booksget_logo'), root_path) %></div><!--тут ссылка на картинку-->
     <div class="container">
 
@@ -16,7 +16,7 @@
         <% end %>
       </div>
 
-      <div class="p1"> <%= link_to "App", products_url, id: "logo" %></div>
+      <div class="p1"> <%= link_to "Редактировать Новости", products_url, id: "logo" %></div>
 
       <nav class="nav pull-right buttons">
         <p class="static_page" style="">
@@ -28,7 +28,7 @@
           <%#= link_to "Как Купить?",    howtobuy_path %><br>
           <%#= link_to "О нашей продукции",    material_path %><br>
           <%#= link_to "Контакты",    contact_path %>
-          <%= link_to "Условия Обмена",    termsofexchange_path %><br>
+          <%#= link_to "Условия Обмена",    termsofexchange_path %><br>
         <%#= link_to "Оплата и Доставка",    shipping_payment_path %>
 
         </p>
