--- a/app/views/static_pages/women.html.erb
+++ b/app/views/static_pages/women.html.erb
@@ -1,9 +1,6 @@
-
-<h1>Женское</h1>
-<p>
-  На этой странице будут размещены Женское белье
-</p>
-
+<br><br><br>
+<h1>Женское Белье</h1>
+<br>
 <table>
   <thead>
   <tr>
@@ -25,6 +22,6 @@
     </tr>
   <% end %>
   </tbody>
-</table>
-
+</table><br>
+<%= link_to 'Создать', new_for_woman_path %>
 <br>
