--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <!--<link rel="stylesheet" href="css/style.css">-->
   <title>Ievtushenko Production | <%= yield(:title) %></title>
+  <style>
+
+  </style>
 </head>
 
 
