added the facebook and instagram images

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,7 @@
   <div class="navbar-inner">
     <div class="Logoimage">
       <%= link_to(image_tag("Logo_I.png", size: "100x100",
-                            :alt => "rss feed", id:'booksget_logo'), root_path) %></div><!--тут ссылка на картинку-->
+                            :alt => "rss feed", id:'ievtushenko_logo'), root_path) %></div><!--тут ссылка на картинку-->
     <div class="container">
 
       <div class="container search_margin_top"
