--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -79,8 +79,8 @@
     <p>+38(067) 722-45-03</p>
     <p>+38(093) 722-45-03</p>
     <h3>Поделиться</h3>
-    <a href="www.facebook.com"><img src="img/facebook.png" alt="facebook"></a>
-    <a href="www.instagram.com"><img src="img/instagram.png" alt="instagram"></a>
+    <a href="www.facebook.com"><img src="assets/facebook.png" alt="facebook"></a>
+    <a href="www.instagram.com"><img src="assets/instagram.png" alt="instagram"></a>
     <h3>Где нас можно найти?</h3>
     <p>Г. Одесса, промрынок "7 км", контейнер 133.</p>
     <p>Ассортимент на сайте может отличаться от фактического.</p>
