refactor the js and css fix

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <!--<link rel="stylesheet" href="css/style.css">-->
+  <link rel="stylesheet" src="assets/custom.css">
   <title>Ievtushenko Production | <%= yield(:title) %></title>
   <style>
 
@@ -54,16 +54,6 @@
   </div>
 
   <br>
-<%# @for_men.each do |for_man| %>
-  <!--<div>-->
-    <!--<a href="men" data-fancybox data-caption="Lorem ipsum dolor sit amet,-->
-     <!--consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit-->
-     <!--obcaecati excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!">-->
-      <!--<%#= image_tag for_man.avatar.thumb.url alt: "photo"%>-->
-    <!--</a>-->
-    <!--<h3>499 грн</h3>-->
-  <!--</div>-->
-<%# end %>
 
 
   <button style="background-position:center; position: center", class="with-delay">
