refactors code and folders

--- a/app/views/static_pages/men.html.erb
+++ b/app/views/static_pages/men.html.erb
@@ -20,10 +20,15 @@
       <td><%= image_tag for_man.avatar.thumb.url %></td>
       <td><%= for_man.name %></td>
       <td><%= for_man.description %></td>
-      <td><%= link_to 'Show', for_man %></td>
-      <td><%= link_to 'Edit', edit_for_man_path(for_man) %></td>
-      <td><%= link_to 'Destroy', for_man, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      <td><%= link_to 'Просмотр', for_man %></td>
+      <td><%= link_to 'Редактирование', edit_for_man_path(for_man) %></td>
+      <td><%= link_to 'Удалить', for_man, method: :delete, data: { confirm: 'Вы уверенны что хотите удалить?' } %></td>
     </tr>
   <% end %>
   </tbody>
 </table>
+<br>
+<button style="background-position:center; position: center", class="with-delay">
+  <%= link_to 'Создать Новое', new_for_man_path, class: "btn btn-mini btn-warning", type: "button"%>
+</button
+><br>
