--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,33 +1,33 @@
 @import "bootstrap";
 @import "bootstrap-sprockets";
 
-html {
-  //overflow-y: scroll;
-}
-
-body {
-  padding-top: 240px;
-  //padding-top: 70px;
-  width: 100%;
-  background-attachment: scroll;
-}
-
-section {
-  overflow: auto;
-}
-
-textarea {
-  resize: vertical;
-}
-
-.center {
-  text-align: center;
-}
-
-.center h1 {
-
-  margin-bottom: 10px;
-}
+//html {
+//  //overflow-y: scroll;
+//}
+//
+//body {
+//  padding-top: 240px;
+//  //padding-top: 70px;
+//  width: 100%;
+//  background-attachment: scroll;
+//}
+//
+//section {
+//  overflow: auto;
+//}
+//
+//textarea {
+//  resize: vertical;
+//}
+//
+//.center {
+//  text-align: center;
+//}
+//
+//.center h1 {
+//
+//  margin-bottom: 10px;
+//}
 
 //////////////////////////////////* header */////////////////////////////////////
 
@@ -56,79 +56,79 @@ textarea {
   float: left;
 }
 
-.p1 {
-  padding: 5px;
-}
+//.p1 {
+//  padding: 5px;
+//}
 
-.buttons{
-  padding: 15px;
-}
+//.buttons{
+//  padding: 15px;
+//}
 
 //////////////////////////* footer */////////////////////////////////////
-
-footer {
-  margin-top: 45px;
-  padding-top: 0px;
-  border-top: 1px solid #eaeaea;
-  color: #999;
-  a {
-    color: #555;
-    padding: 20px;
-    font-size: 17px;
-    &:hover {
-      color: #222;
-    }
-  }
-  small {
-    float: left;
-    margin-top: 2%;
-  }
-  ul {
-    float: right;
-    list-style: none;
-    li {
-      float: left;
-      margin-left: 50px;
-      margin-top: 3%;
-    }
-  }
-}
-
-.page-wrap {
-  min-height: 100%;
-  /* equal to footer height */
-  margin-bottom: -140px;
-
-}
-
-.railstutorial{
-  float: left;
-  margin-top: 0%;
-  padding-top: 10px;
-}
-
-.Tesl{
-  float: right;
-  margin-top: 0.5%;
-  padding-right: 50px;
-
-}
-
-footer :after {
-  content: "";
-  display: block;
-}
-
-.footer, .push { /* .push must be the same height as footer */
-  height: 90px;
-}
-
-.footer{              /* тут мы делаем футер статичным и привязываем его к полу */
-  background: #c4d8db;
-  position: fixed;
-  bottom: 0%;
-  width: 100%
-}
+//
+//footer {
+//  margin-top: 45px;
+//  padding-top: 0px;
+//  border-top: 1px solid #eaeaea;
+//  color: #999;
+//  a {
+//    color: #555;
+//    padding: 20px;
+//    font-size: 17px;
+//    &:hover {
+//      color: #222;
+//    }
+//  }
+//  small {
+//    float: left;
+//    margin-top: 2%;
+//  }
+//  ul {
+//    float: right;
+//    list-style: none;
+//    li {
+//      float: left;
+//      margin-left: 50px;
+//      margin-top: 3%;
+//    }
+//  }
+//}
+//
+//.page-wrap {
+//  min-height: 100%;
+//  /* equal to footer height */
+//  margin-bottom: -140px;
+//
+//}
+//
+//.railstutorial{
+//  float: left;
+//  margin-top: 0%;
+//  padding-top: 10px;
+//}
+//
+//.Tesl{
+//  float: right;
+//  margin-top: 0.5%;
+//  padding-right: 50px;
+//
+//}
+//
+//footer :after {
+//  content: "";
+//  display: block;
+//}
+//
+//.footer, .push { /* .push must be the same height as footer */
+//  height: 90px;
+//}
+//
+//.footer{              /* тут мы делаем футер статичным и привязываем его к полу */
+//  background: #c4d8db;
+//  position: fixed;
+//  bottom: 0%;
+//  width: 100%
+//}
 
 
 
