--- a/app/views/static_pages/women.html.erb
+++ b/app/views/static_pages/women.html.erb
@@ -4,8 +4,8 @@
 <table>
   <thead>
   <tr>
-    <th>Name</th>
-    <th>Description</th>
+    <th>.</th>
+    <th>.</th>
     <th colspan="3"></th>
   </tr>
   </thead>
@@ -22,6 +22,9 @@
     </tr>
   <% end %>
   </tbody>
-</table><br>
-<%= link_to 'Создать', new_for_woman_path %>
+</table><br><br>
+
+<button style="background-position:center; position: center", class="with-delay">
+  <%= link_to 'Создать Новое', new_for_woman_path, class: "btn btn-mini btn-warning", type: "button"%>
+</button>
 <br>
