--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,19 +1,8 @@
 <br><br><br>
 <h1>Наши Контакты</h1>
-<p>
-  Здесь в скором времени вы увидете наши контакты!
-</p>
-
-
-<h1>Наши Контакты</h1>
-<p>
-  Здесь в скором времени вы увидете наши контакты!
-</p>
-<h1>Наши Контакты</h1>
-<p>
-  Здесь в скором времени вы увидете наши контакты!
-</p>
-<h1>Наши Контакты</h1>
-<p>
-  Здесь в скором времени вы увидете наши контакты!
-</p>
+<br>
+<h2>+38(095) 067-48-23</h2><br>
+<h2>Александр</h2>
+<br><br>
+<h3>Где нас можно найти?</h3><br>
+<p>Г. Одесса, промрынок "7 км", ул Престижная, 455.</p>
