--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -63,14 +63,14 @@
   </div>
   <div class="contacts">
     <h3>Контакты</h3>
-    <p>+38(048) 722-45-03</p>
-    <p>+38(067) 722-45-03</p>
-    <p>+38(093) 722-45-03</p>
+    <p>+38(095) 067-48-23</p>
+    <p>Александр</p>
+
     <h3>Поделиться</h3>
     <a href="www.facebook.com"><img src="assets/facebook.png" alt="facebook"></a>
     <a href="www.instagram.com"><img src="assets/instagram.png" alt="instagram"></a>
     <h3>Где нас можно найти?</h3>
-    <p>Г. Одесса, промрынок "7 км", контейнер 133.</p>
+    <p>Г. Одесса, промрынок "7 км", ул Престижная, 455.</p>
     <p>Ассортимент на сайте может отличаться от фактического.</p>
   </div>
   <div class="timework">
@@ -79,6 +79,7 @@
     <p>ВТ: 10:00 - 17:00</p>
     <p>СР: 10:00 - 17:00</p>
     <p>ЧТ: 10:00 - 17:00</p>
+    <p>ПТ: Выходной</p>
     <p>СБ: 10:00 - 17:00</p>
     <p>ВС: 10:00 - 17:00</p>
   </div>
