--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
     <br><br><br><br><br><br>
     <div class="menu">
 
-      <!--<h1>Евтушенко Продукция</h1>-->
+      <!--<h1>Евтушенко Продукция</h1>--><br>
       <ul>
         <li><%= link_to "Главная",    home_path %></li>
         <li><%= link_to "О НАС",    about_path %></li>
