--- a/app/views/for_women/edit.html.erb
+++ b/app/views/for_women/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', for_woman: @for_woman %>
 
-<%= link_to 'Show', @for_woman %> |
-<%= link_to 'Back', for_women_path %>
+<%= link_to 'Показать', @for_woman %> |
+<%= link_to 'Назад', for_women_path %>
