--- a/app/views/for_women/show.html.erb
+++ b/app/views/for_women/show.html.erb
@@ -15,5 +15,6 @@
   <%= @for_woman.description %>
 </p>
 
-<%= link_to 'Edit', edit_for_woman_path(@for_woman) %> |
-<%= link_to 'Back', for_women_path %>
+<%= link_to 'Редактировать', edit_for_woman_path(@for_woman) %> |
+<%= link_to 'Назад', for_women_path %>
+
