--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -6,8 +6,11 @@
 
 
 <br><br><br>
-<h1>About Us</h1>
+<h1>О Нас</h1>
 <br>
+<button style="background-position:center; position: center", class="with-delay">
+  <%= link_to 'Назад', :back, class: "btn btn-mini btn-info", type: "button" %>
+</button>
 <p>
   Здесь в скором времени вы увидете информацию о наших продуктах!
 </p>
