--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,8 +1,12 @@
 <br><br><br>
 <h1>Наши Контакты</h1>
+<button style="background-position:center; position: center", class="with-delay">
+  <%= link_to 'Назад', :back, class: "btn btn-mini btn-info", type: "button" %>
+</button>
 <br>
-<h2>+38(095) 067-48-23</h2><br>
-<h2>Александр</h2>
+
 <br><br>
 <h3>Где нас можно найти?</h3><br>
 <p>Г. Одесса, промрынок "7 км", ул Престижная, 455.</p>
+<h3 style="text-align: center;">+38(095) 067-48-23</h3><br>
+<h3 style="text-align: center;">Александр</h3>
