--- a/app/views/static_pages/howtobuy.html.erb
+++ b/app/views/static_pages/howtobuy.html.erb
@@ -1,5 +1,8 @@
 <br><br><br>
 <h1>Как купить нашу продукцию?</h1>
+<button style="background-position:center; position: center", class="with-delay">
+  <%= link_to 'Назад', :back, class: "btn btn-mini btn-info", type: "button" %>
+</button>
 <p>
   На этой странице будут размещаться информация, о том, как преобрести нашу продукцию нижнего белья
 </p>
