--- a/app/views/static_pages/shipping_payment.erb
+++ b/app/views/static_pages/shipping_payment.erb
@@ -1,6 +1,8 @@
 <br><br><br>
 <h1>Оплата и Доставка</h1>
-
+<button style="background-position:center; position: center", class="with-delay">
+  <%= link_to 'Назад', :back, class: "btn btn-mini btn-info", type: "button" %>
+</button>
 <p>
   На этой странице будут описание того, как вы сможете купить товар и оплатить его
 </p>
