--- a/app/views/static_pages/material.html.erb
+++ b/app/views/static_pages/material.html.erb
@@ -1,5 +1,8 @@
 <br><br><br>
 <h1>О Нашей Продукции</h1>
+<button style="background-position:center; position: center", class="with-delay">
+  <%= link_to 'Назад', :back, class: "btn btn-mini btn-info", type: "button" %>
+</button>
 <p>
   На этой странице будут размещена информация о качестве нашей продукции, и где она береться
 </p>
