--- a/app/views/static_pages/men.html.erb
+++ b/app/views/static_pages/men.html.erb
@@ -1,15 +1,15 @@
 <br><br><br>
 <h1>Мужское Белье</h1>
-<p>
-  На этой странице будут размещены Мужское белье
-</p>
 
 
+<button style="background-position:center; position: center", class="with-delay">
+  <%= link_to 'Назад', :back, class: "btn btn-mini btn-info", type: "button" %>
+</button>
 <table>
   <thead>
   <tr>
-    <th>Name</th>
-    <th>Description</th>
+    <th>.</th>
+    <th>.</th>
     <th colspan="3"></th>
   </tr>
   </thead>
