--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -9,4 +9,9 @@
 <h3>Где нас можно найти?</h3><br>
 <p>Г. Одесса, промрынок "7 км", ул Престижная, 455.</p>
 <h3 style="text-align: center;">+38(095) 067-48-23</h3><br>
-<h3 style="text-align: center;">Александр</h3>
+<h3 style="text-align: center;">Александр</h3>\
+<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY async defer></script>
+<script src="assets/jquery.js" type="text/javascript"></script>
+<script src="assets/slick.min.js" type="text/javascript"></script>
+<script src="assets/jquery.fancybox.js" type="text/javascript"></script>
+<script src="assets/script.js" type="text/javascript"></script>
