--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,13 +32,13 @@
       </div>
     </div>
 
-
+    <br>
 
     <%= render 'layouts/header' %>
     <br><br><br><br><br><br>
     <div class="menu">
 
-      <!--<h1>Евтушенко Продукция</h1>-->
+      <!--<h1>Евтушенко Продукция</h1>--><br>
       <ul>
         <li><%= link_to "Главная",    home_path %></li>
         <li><%= link_to "О НАС",    about_path %></li>
