--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -12,6 +12,6 @@
 <h3 style="text-align: center;">Александр</h3>\
 <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY async defer></script>
 <script src="assets/jquery.js" type="text/javascript"></script>
-<script src="assets/slick.min.js" type="text/javascript"></script>
+<script src="assets/slick.min.js", type="text/javascript"></script>
 <script src="assets/jquery.fancybox.js" type="text/javascript"></script>
 <script src="assets/script.js" type="text/javascript"></script>
