--- a/app/views/static_pages/shipping_payment.erb
+++ b/app/views/static_pages/shipping_payment.erb
@@ -4,5 +4,9 @@
   <%= link_to 'Назад', :back, class: "btn btn-mini btn-info", type: "button" %>
 </button>
 <p>
-  На этой странице будут описание того, как вы сможете купить товар и оплатить его
+  Мы осуществляем доставку товаров нашего сайта по всей Украине, через Новую Почту
+</p>
+
+<p>
+  Опалата осуществялется наложным платежем или через начисления денег на карту Приватбанка
 </p>
