--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1519,7 +1519,7 @@ table {
   width: 100%;
   max-width: 1920px;
   min-width: 800px;
-  background-color: #eeeeee;
+  background-color:#cae458; //#eeeeee;
   margin: 0 auto;
   min-height: 60px;
   text-align: center;
