--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -11,8 +11,51 @@
 <button style="background-position:center; position: center", class="with-delay">
   <%= link_to 'Назад', :back, class: "btn btn-mini btn-info", type: "button" %>
 </button>
-<p>
-  Здесь в скором времени вы увидете информацию о наших продуктах!
+<p style="font-family: Arial; margin: 10px 0 0 0; text-align: justify;}">
+  Мы рады приветствовать вас на сайте нижнего белья (https://ievtushenko.herokuapp.com).</p>
+
+<p style="font-family: Arial; margin: 10px 0 0 0; text-align: justify;}">
+  Наша компания предлагает высококачественное бельё известных турецких брендов, таких как  Berrak, Pink secre , и др.</p>
+
+<p style="font-family: Arial; margin: 10px 0 0 0; text-align: justify;}">
+  Эти компании известны тем, кто любит простую, стильную и удобную одежду. Заводы по производству белья находится в Стамбуле. </p>
+
+<p style="font-family: Arial; margin: 10px 0 0 0; text-align: justify;}">
+  Популярность нашего магазина вполне объяснима несколькими факторами: </p>
+
+<p style="font-family: Arial; margin: 10px 0 0 0; text-align: justify;}">
+  сырьё для изготовления отличается высоким качеством. Для работы отбирается только высококачественный хлопок, который чешется модальными гребенками.</p>
+<p style="font-family: Arial; margin: 10px 0 0 0; text-align: justify;}">
+  Это дает возможность сделать текстиль мягким и нежным на ощупь.
+  в качестве красителей используются натуральные компоненты.</p>
+
+<p style="font-family: Arial; margin: 10px 0 0 0; text-align: justify;}">
+  Все синтетические карсители имеют сертификаты качества и соответствуют стандартам безопасности.
+</p>
+
+<p style="font-family: Arial; margin: 10px 0 0 0; text-align: justify;}">
+  Дизайн домашней одежды разрабатывается с учетом с учетом нескольких факторов – простота, стиль и следование модным тенденциям.
+</p>
+<p style="font-family: Arial; margin: 10px 0 0 0; text-align: justify;}"></p>
+
+<p style="font-family: Arial; margin: 10px 0 0 0; text-align: justify;}">
+  Приемлемые цены на весь представленный в каталоге ассортимент - это следствие поставок товаров напрямую с фабрики изготовителей.</p>
+
+<p style="font-family: Arial; margin: 10px 0 0 0; text-align: justify;}">
+  Приемлемые цены на весь представленный в каталоге.</p>
+
+<p style="font-family: Arial; margin: 10px 0 0 0; text-align: justify;}">
+  Приветливые и квалифицированные менеджеры готовы Вам помочь сделать выбор и оформить заказ.</p>
+
+<p style="font-family: Arial; margin: 10px 0 0 0; text-align: justify;}">
+  Мы регулярно проводим акции и скидки поэтому очень внимательно следите за новостями на сайте магазина, так как Вы можете получить реальную возможность сэкономить Ваши денежные средства.</p>
+
+<p style="font-family: Arial; margin: 10px 0 0 0; text-align: justify;}">
+  Если Вам нужно красивое бельё высокого качества от проверенных брендов, обращайтесь к нам - и вы получите отличную продукцию в кратчайшие сроки на выгодных для Вас условиях.</p>
+
+<p style="font-family: Arial; margin: 10px 0 0 0; text-align: justify;}"> Желаем Вам приятных и удачных покупок.</p>
+
+
 </p>
 </body>
 </html>
